--- a/config.cfg
+++ b/config.cfg
@@ -1,7 +1,7 @@
 #Server Port
 serverPort=9090
 #Comma seperated list of all the zookeeper servers
-zkServer=localhost:2181,localhost:2181
+zkServer=192.168.223.202:2181,192.168.223.201:2181,192.168.223.204:2181
 #Http path of the repository. Ignore if you dont intent to upload files from repository.
 scmRepo=http://myserver.com/@rev1=
 #Path appended to the repo url. Ignore if you dont intent to upload files from repository.
@@ -13,7 +13,7 @@ ldapDomain=mycompany,mydomain
 ldapUrl=ldap://<ldap_host>:<ldap_port>/dc=mycom,dc=com
 #Specific roles for ldap authenticated users. Ignore if using file based authentication.
 ldapRoleSet={"users": [{ "username":"domain\\user1" , "role": "ADMIN" }]}
-userSet = {"users": [{ "username":"admin" , "password":"manager","role": "ADMIN" },{ "username":"appconfig" , "password":"appconfig","role": "USER" }]}
+userSet = {"users": [{ "username":"admin" , "password":"123456","role": "ADMIN" },{ "username":"appconfig" , "password":"appconfig","role": "USER" }]}
 #Set to prod in production and dev in local. Setting to dev will clear history each time.
 env=prod
 jdbcClass=org.h2.Driver
@@ -22,13 +22,13 @@ jdbcUser=root
 jdbcPwd=manager
 #If you want to use mysql db to store history then comment the h2 db section.
 #jdbcClass=com.mysql.jdbc.Driver
-#jdbcUrl=jdbc:mysql://localhost:3306/zkui
+#jdbcUrl=jdbc:mysql://ubuntu2:3306/zkui
 #jdbcUser=root
-#jdbcPwd=manager
+#jdbcPwd=123456
 loginMessage=Please login using admin/manager or appconfig/appconfig.
 #session timeout 5 mins/300 secs.
 sessionTimeout=300
-#Default 5 seconds to keep short lived zk sessions. If you have large data then the read will take more than 30 seconds so increase this accordingly. 
+#Default 5 seconds to keep short lived zk sessions. If you have large data then the read will take more than 30 seconds so increase this accordingly.
 #A bigger zkSessionTimeout means the connection will be held longer and resource consumption will be high.
 zkSessionTimeout=5
 #Block PWD exposure over rest call.
